force-app/main/default/objects/BOT_Drug_Access__c/BOT_Drug_Access__c.object-meta.xml
<CustomObject>
    <description>(BOT) It is created by BusinessOne Technologies Inc. It is used to store the drug access percentage.</description>
    <label>Drug Access</label>
    <nameField>
        <label>Market</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Drug Access</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>