force-app/main/default/objects/BOT_Drug_Access__c/fields/BOT_Access_Percentage__c.field-meta.xml
<CustomField>
    <fullName>BOT_Access_Percentage__c</fullName>
    <description>Used to store the Access Perchentage</description>
    <label>Access Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>