force-app/main/default/objects/BOT_Drug_Access__c/fields/BOT_Account__c.field-meta.xml
<CustomField>
    <fullName>BOT_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup relationship to Account.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Drug Access</relationshipLabel>
    <relationshipName>Drug_Access</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>