force-app/main/default/objects/BOT_Drug_Access__c/fields/BOT_Drug_Status__c.field-meta.xml
<CustomField>
    <fullName>BOT_Drug_Status__c</fullName>
    <description>To store the drug status.</description>
    <label>Drug Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>