force-app/main/default/objects/BOT_Drug_Access__c/fields/BOT_Formulary_Drug_Rx_Lives__c.field-meta.xml
<CustomField>
    <fullName>BOT_Formulary_Drug_Rx_Lives__c</fullName>
    <description>Used to store the formulary drug Rx lives.</description>
    <label>Formulary Drug Rx Lives</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>