force-app/main/default/objects/BOT_Drug_Access__c/fields/BOT_Formulary_Product__c.field-meta.xml
<CustomField>
    <fullName>BOT_Formulary_Product__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup relationship to formulary product (Drug) object.</description>
    <label>Drug Name</label>
    <referenceTo>Formulary_Products_vod__c</referenceTo>
    <relationshipLabel>Drug Access</relationshipLabel>
    <relationshipName>Drug_Access</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>