force-app/main/default/objects/BOT_Drug_Access__c/fields/BOT_Total_Plan_Rx_Lives__c.field-meta.xml
<CustomField>
    <fullName>BOT_Total_Plan_Rx_Lives__c</fullName>
    <description>Used to store the BOT total plan Rx lives</description>
    <label>Total Plan Rx Lives</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>